--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_URI=mongodb+srv://Syed2003:Syed2003@cluster0.s6wh2dp.mongodb.net/?retryWrites=true&w=majority
+DB_URI=mongodb+srv://Syed2003:Syed2003@cluster1.kasvytc.mongodb.net/?retryWrites=true&w=majority
