--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webdevelopmentcourse",
+  "name": "project1",
   "version": "1.0.0",
   "description": "Assignment Tracker",
   "main": "index.js",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/2003Mujtaba/WScode"
+    "url": "https://github.com/2003Mujtaba/project1"
   },
   "author": "Mujtaba Hussaini",
   "license": "ISC",
