--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project1",
+  "name": "webdevelopmentcourse",
   "version": "1.0.0",
   "description": "Assignment Tracker",
   "main": "index.js",
