--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webdevelopmentcourse",
+  "name": "project1",
   "version": "1.0.0",
-  "description": "Assignment Tracker",
+  "description": "Survey Site",
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
@@ -17,7 +17,7 @@
     "dotenv": "^16.3.1",
     "ejs": "~3.1.6",
     "express": "^4.18.2",
-    "method-override": "^3.0.0", 
+    "method-override": "^3.0.0",
     "mongoose": "^8.0.0"
   }
 }
